--- a/src/components/DealerSpeechBubble.module.css
+++ b/src/components/DealerSpeechBubble.module.css
@@ -8,6 +8,7 @@
   width: max-content;
   text-align: center;
   animation: speechFadeIn 0.4s ease-out both;
+  overflow: hidden;
 }
 
 .dealerName {
@@ -29,6 +30,10 @@
   color: var(--text-primary);
   line-height: 1.5;
   margin: 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .tail {
